--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./assests/logo.jpg" type="image/x-icon>
+    
     <title>Gitishan Portfolio</title>
+    <link rel="icon" href="./assests/logo.jpg" type="image/x-icon"/>
 
-    <!--custom css-->
+    
     <link rel="stylesheet" href="css/syle.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
