--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
           alt="Email icon"
           class="icon contact-icon email-icon"
         />
-        <p><a href="https://mail.google.com/mail/u/0/#inbox?compose=new">Gmail</a></p>
+        <p><a href="mailto:gitishan20@gmail.com">Gmail</a></p>
       </div>
       <div class="contact-info-container">
         <img
