--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <nav id="desktop-nav">
-    <div class="logo">John Doe</div>
+    <div class="logo">Portfolio</div>
     <div>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
