--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="section-container">
       <div class="section__pic-container">
         <img
-          src="./assets/about.png"
+          src="./assets/about 1.png"
           alt="Profile picture"
           class="about-pic"
         />
