--- a/index.html
+++ b/index.html
@@ -112,13 +112,15 @@
         </div>
         <div class="text-container">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-            reprehenderit et laborum, rem, dolore eum quod voluptate
-            exercitationem nobis, nihil esse debitis maxime facere minus sint
-            delectus velit in eos quo officiis explicabo deleniti dignissimos.
-            Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-            reiciendis ea magnam? Nulla, impedit fuga!
-          </p>
+            Hi, I'm Gitishan, a Frontend Deveeloper and Video Editor with a passion for making websites and editing videos for youtube.
+            Looking ahead, my goal is to be a Full Stack Web Developer.</p>
+            <br>
+            <p>Thank you for visiting my portfolio. I invite you to explore my work and reach out if you'd like to collaborate or discuss any opportunities.
+            </p>
+
+
+
+          
         </div>
       </div>
     </div>
