--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
           <div class="btn-container">
             <button
               class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/'"
+              onclick="location.href='https://github.com/gitishan20/Portfolio'"
             >
               Github
             </button>
@@ -286,12 +286,7 @@
             >
               Video 1
             </button>
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/'"
-            >
-              Video 2
-            </button>
+            
           </div>
         </div>
         
