--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
           src="./assets/linkedin.png"
           alt="My LinkedIn profile"
           class="icon"
-          onclick="location.href='https://linkedin.com/'"
+          onclick="location.href='https://www.linkedin.com/in/gitishan-biswal-7a1972221/'"
         />
         <img
           src="./assets/github.png"
           alt="My Github profile"
           class="icon"
-          onclick="location.href='https://github.com/'"
+          onclick="location.href='https://github.com/gitishan20'"
         />
       </div>
     </div>
@@ -98,7 +98,7 @@
               class="icon"
             />
             <h3>Experience</h3>
-            <p>6 month  <br />Frontend Development</p>
+            <p>6 months  <br />Frontend Development</p>
           </div>
           <div class="details-container">
             <img
@@ -107,7 +107,7 @@
               class="icon"
             />
             <h3>Education</h3>
-            <p>Bachelors Degree<br />2021-2025</p>
+            <p>Bachelors Degree KIIT<br />2021-2025</p>
           </div>
         </div>
         <div class="text-container">
@@ -278,7 +278,7 @@
               class="project-img"
             />
           </div>
-          <h2 class="experience-sub-title project-title">Edited Video</h2>
+          <h2 class="experience-sub-title project-title">Edited Videos</h2>
           <div class="btn-container">
             <button
               class="btn btn-color-2 project-btn"
