--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
       </div>
     </div>
   </nav>
+
+  <!--Profile Section-->
+
   <section id="profile">
     <div class="section__pic-container">
       <img src="./assets/pfpfinal.png" alt="John Doe profile picture" />
@@ -51,6 +54,8 @@
       <p class="section__text__p1">Hello, I'm</p>
       <h1 class="title">Gitshan Biswal</h1>
       <p class="section__text__p2">Frontend Developer</p>
+
+      
       <div class="btn-container">
         <button
           class="btn btn-color-2"
@@ -78,6 +83,9 @@
       </div>
     </div>
   </section>
+
+  <!--About Section-->
+  
   <section id="about">
     <p class="section__text__p1">Get To Know More</p>
     <h1 class="title">About Me</h1>
