--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <section id="profile">
     <div class="section__pic-container">
-      <img src="./assets/pfpfinal.png" alt="John Doe profile picture" />
+      <img src="./assets/pfpfinal.png" alt="Gitishan  profile picture" />
     </div>
     <div class="section__text">
       <p class="section__text__p1">Hello, I'm</p>
